# ndbc-data-rust

./: Cargo.toml  README.md
data-samples/: NDBC - Measurement Descriptions and Units.html  realtimedata.txt  stationmetadata.xml
src/: lib.rs  main.rs
