[package]
name = "ndbc-data"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fixed_width = "0.3"
polars = { version = "0.43", features = ["lazy", "parquet", "dtype-datetime", "temporal"] }
quick-xml = { version = "0.31", features = ["serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
time = { version = "0.3", features = ["parsing", "macros", "formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
